--- a/index.html
+++ b/index.html
@@ -69,5 +69,19 @@
         </div>
       </main>
     </div>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .getRegistrations()
+          .then(function (registrations) {
+            for (let registration of registrations) {
+              registration.unregister();
+            }
+          })
+          .catch(function (err) {
+            console.log("Service Worker registration failed: ", err);
+          });
+      }
+    </script>
   </body>
 </html>
