--- a/index.html
+++ b/index.html
@@ -14,60 +14,58 @@
   </head>
 
   <body class="bg-black text-white">
-    <div class="flex flex-col min-h-screen">
-      <header class="px-3 w-full">
-        <div
-          class="mr-auto ml-auto flex items-center justify-between"
-          style="height: 50px;"
-        >
-          <div class="pr-2">
-            <a
-              href="/"
-              class="text-lg p-1 hover:bg-white hover:text-black no-underline font-bold transition duration-200 rounded-sm"
-              ><span>arnodo</span
-              ><span class="text-lg font-bold text-red-500">.net</span></a
-            >
-          </div>
+    <header class="px-3 w-full">
+      <div
+        class="mr-auto ml-auto flex items-center justify-between"
+        style="height: 50px;"
+      >
+        <div class="pr-2">
+          <a
+            href="/"
+            class="text-lg p-1 hover:bg-white hover:text-black no-underline font-bold transition duration-200 rounded-sm"
+            ><span>arnodo</span
+            ><span class="text-lg font-bold text-red-500">.net</span></a
+          >
         </div>
-      </header>
-      <main class="px-4 mt-16 mx-auto w-full text-center">
-        <div>
-          <h1 class="text-4xl">
-            Alessandro Arnodo
-          </h1>
-          <p class="mt-4 text-lg">
-            I write code. For fun & food.
-          </p>
-          <p class="mt-4 text-base">
-            <a
-              class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
-              href="https://github.com/vesparny"
-              >GitHub</a
-            >
-          </p>
-          <p class="mt-4 text-base">
-            <a
-              class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
-              href="https://twitter.com/vesparny"
-              >@vesparny</a
-            >
-          </p>
-          <p class="mt-4 text-base">
-            <a
-              class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
-              href="mailto:alessandro@arnodo.net"
-              >email</a
-            >
-            (
-            <a
-              class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
-              href="/alessandro@arnodo.net.asc"
-              >GPG</a
-            >
-            0x784358031C8E1716 )
-          </p>
-        </div>
-      </main>
-    </div>
+      </div>
+    </header>
+    <main class="px-4 mt-16 text-center">
+      <div>
+        <h1 class="text-4xl">
+          Alessandro Arnodo
+        </h1>
+        <p class="mt-4 text-lg">
+          I write code. For fun & food.
+        </p>
+        <p class="mt-4 text-base">
+          <a
+            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            href="https://github.com/vesparny"
+            >GitHub</a
+          >
+        </p>
+        <p class="mt-4 text-base">
+          <a
+            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            href="https://twitter.com/vesparny"
+            >@vesparny</a
+          >
+        </p>
+        <p class="mt-4 text-base">
+          <a
+            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            href="mailto:alessandro@arnodo.net"
+            >email</a
+          >
+          (
+          <a
+            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            href="/alessandro@arnodo.net.asc"
+            >GPG</a
+          >
+          0x784358031C8E1716 )
+        </p>
+      </div>
+    </main>
   </body>
 </html>
