--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
         </p>
         <p class="mt-4 text-base">
           <a
-            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
             href="https://github.com/vesparny"
             >GitHub</a
           >
         </p>
         <p class="mt-4 text-base">
           <a
-            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
             href="https://twitter.com/vesparny"
             >@vesparny</a
           >
         </p>
         <p class="mt-4 text-base">
           <a
-            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
             href="mailto:alessandro@arnodo.net"
             >email</a
           >
           (
           <a
-            class="text-red-500 hover:text-blue-500 transition duration-300 ease-in"
+            class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
             href="/alessandro@arnodo.net.asc"
             >GPG</a
           >
