--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <a
             href="/"
             class="text-lg p-1 hover:bg-white hover:text-black no-underline font-bold transition duration-200 rounded-sm"
-            ><span>arnodo</span
-            ><span class="text-lg font-bold text-red-500">.net</span></a
+            ><span>Alessandro</span
+            ><span class="text-lg font-bold text-red-500"> Arnodo</span></a
           >
         </div>
       </div>
@@ -54,7 +54,7 @@
         <p class="mt-4 text-base">
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
-            href="mailto:alessandro@arnodo.net"
+            href="mailto:arny@ikmail.com"
             >email</a
           >
           (
