--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <header class="px-3 w-full">
       <div
         class="mr-auto ml-auto flex items-center justify-between"
-        style="height: 50px;"
+        style="height: 50px"
       >
         <div class="pr-2">
           <a
-            href="/"
+            href="https://arnodo.net"
             class="text-lg p-1 hover:bg-white hover:text-black no-underline font-bold transition duration-200 rounded-sm"
             ><span>Alessandro</span
             ><span class="text-lg font-bold text-red-500"> Arnodo</span></a
@@ -31,12 +31,8 @@
     </header>
     <main class="px-4 mt-16 text-center">
       <div>
-        <h1 class="text-4xl">
-          Alessandro Arnodo
-        </h1>
-        <p class="mt-4 text-lg">
-          I write code. For fun & food.
-        </p>
+        <h1 class="text-4xl">Alessandro Arnodo</h1>
+        <p class="mt-4 text-lg">I write code. For fun & food.</p>
         <p class="mt-4 text-base">
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
