--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p class="mt-4 text-base">
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
-            href="mailto:alar@ik.me"
+            href="mailto:alar@ikmail.com"
             >email</a
           >
           (
