--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           (
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
-            href="/alessandro@arnodo.net.asc"
+            href="/pubkey.txt"
             >GPG</a
           >
           0x784358031C8E1716 )
