--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="px-3 w-full">
       <div
         class="mr-auto ml-auto flex items-center justify-between"
-        style="height: 50px;"
+        style="height: 50px"
       >
         <div class="pr-2">
           <a
@@ -31,12 +31,8 @@
     </header>
     <main class="px-4 mt-16 text-center">
       <div>
-        <h1 class="text-4xl">
-          Alessandro Arnodo
-        </h1>
-        <p class="mt-4 text-lg">
-          I write code. For fun & food.
-        </p>
+        <h1 class="text-4xl">Alessandro Arnodo</h1>
+        <p class="mt-4 text-lg">I write code. For fun & food.</p>
         <p class="mt-4 text-base">
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
@@ -44,7 +40,7 @@
             >GitHub</a
           >
         </p>
-        
+
         <p class="mt-4 text-base">
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
@@ -56,15 +52,8 @@
           <a
             class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
             href="mailto:vesparny@icloud.com"
-            >email</a
+            >Email</a
           >
-          (
-          <a
-            class="text-red-500 hover:bg-white hover:text-black p-1 transition duration-200 ease-in"
-            href="/pubkey.txt"
-            >GPG</a
-          >
-          0x784358031C8E1716 )
         </p>
       </div>
     </main>
